<resources>
    <string name="app_name">Video Foods</string>
    <string name="brand_name">Arda Food</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Signup">Sign up</string>
    <string name="prompt_fill_email">Type your email here</string>
    <string name="prompt_fill_password">Type your password here</string>
</resources>